tests/good/syntax/022-value-identifier.clap
val x : int = 42
val y : int = x

