tests/bad/lexical/13-int-7.clap
val x = 0b000000!00000000111

